# django-todo

./: .gitignore  README.md  TODO.md  launch.json  pyproject.toml
project/: db.sqlite3
project/conf/: settings.py  urls.py
project/core/: admin.py  models.py  serializers.py  views.py
project/core/migrations/: 0001_initial.py  0002_todo_project.py  0003_todo_completed_at_todo_deadline.py
project/project/: models.py  tests.py
src/conf/: settings.py  urls.py
src/core/: models.py  serializers.py  tests.py  views.py
src/core/management/commands/: checkdeadlines.py
src/core/migrations/: 0001_initial.py
src/project/: models.py  views.py
src/project/migrations/: 0001_initial.py
